Fixed double borders in style editor

--- a/files/style/styleEditor.less
+++ b/files/style/styleEditor.less
@@ -8,7 +8,7 @@
 	}
 	
 	> div {
-		border: 1px solid @wcfContainerBorderColor;
+		border: 2px solid rgba(255, 255, 255, 1);
 		border-radius: @wcfContainerBorderRadius;
 		cursor: pointer;
 		display: block;
